--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "bulma": "^0.7.2",
+    "highlight.js": "^9.13.0",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
+    "vue-highlightjs": "^1.3.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -22,7 +25,6 @@
     "@vue/cli-plugin-unit-mocha": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
     "@vue/eslint-config-airbnb": "^3.0.5",
-    "@vue/eslint-config-prettier": "^3.0.5",
     "@vue/test-utils": "^1.0.0-beta.20",
     "chai": "^4.1.2",
     "node-sass": "^4.9.0",
